--- a/teamProject/pom.xml
+++ b/teamProject/pom.xml
@@ -14,6 +14,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.12</version>
+    <scope>provided</scope>
+</dependency>
   </dependencies>
   <build>
     <finalName>teamProject</finalName>
