--- a/teamProject/src/main/webapp/WEB-INF/web.xml
+++ b/teamProject/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>mainsearchResultServ</servlet-name>
+  	<display-name>mainsearchResultServ</display-name>
+  	<description></description>
+  	<servlet-class>member.mainsearchResultServ</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>mainsearchResultServ</servlet-name>
+  	<url-pattern>/mainsearchResultServ</url-pattern>
+  </servlet-mapping>
 </web-app>
