--- a/teamProject/pom.xml
+++ b/teamProject/pom.xml
@@ -66,6 +66,13 @@
 			<version>2.4.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+<dependency>
+    <groupId>commons-fileupload</groupId>
+    <artifactId>commons-fileupload</artifactId>
+    <version>1.4</version>
+</dependency>
+		
 	</dependencies>
 	<build>
 		<finalName>app</finalName>
