--- a/teamProject/src/main/webapp/WEB-INF/web.xml
+++ b/teamProject/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,7 @@
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
+ 
 <web-app>
    <display-name>teamProject</display-name>
    <welcome-file-list>
@@ -22,7 +23,7 @@
       <servlet-name>front</servlet-name>
       <url-pattern>*.ac</url-pattern>
    </servlet-mapping>
-     <filter>
+<!--      <filter>
       <filter-name>sitemesh</filter-name>
       <filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
    </filter>
@@ -30,6 +31,6 @@
    <filter-mapping>
       <filter-name>sitemesh</filter-name>
       <url-pattern>/*</url-pattern>
-   </filter-mapping>
+   </filter-mapping> -->
    
 </web-app>
