--- a/teamProject/src/main/webapp/WEB-INF/web.xml
+++ b/teamProject/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
    </servlet-mapping>
    <servlet-mapping>
       <servlet-name>front</servlet-name>
-      <url-pattern>*.ac</url-pattern>
+      <url-pattern>*.ad</url-pattern>
    </servlet-mapping>
       <filter>
       <filter-name>sitemesh</filter-name>
