--- a/teamProject/pom.xml
+++ b/teamProject/pom.xml
@@ -95,5 +95,21 @@
 	</dependencies>
 	<build>
 		<finalName>app</finalName>
+		
+		
+		 <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
+    
+    
 	</build>
+	
+	
 </project>
