--- a/teamProject/pom.xml
+++ b/teamProject/pom.xml
@@ -9,8 +9,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>app Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	
 	<dependencies>
-
 
 		<dependency>
 			<groupId>opensymphony</groupId>
@@ -84,7 +87,7 @@
 
 	</dependencies>
 
-<build>
+	<build>
 		<finalName>app</finalName>
 		<plugins>
 			<plugin>
@@ -125,6 +128,6 @@
 		</plugins>
 	</build>
 
-	
-	
+
+
 </project>
