--- a/teamProject/pom.xml
+++ b/teamProject/pom.xml
@@ -13,6 +13,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
+	<repositories>
+    <repository>
+        <id>psiegman-repo</id>
+        <url>https://github.com/psiegman/mvn-repo/raw/master/releases</url>
+    </repository>
+</repositories>
+	
+	
 	<dependencies>
 
 		<dependency>
@@ -85,6 +93,15 @@
 			<version>1.4.7</version>
 		</dependency>
 
+
+<!-- https://mvnrepository.com/artifact/nl.siegmann.epublib/epublib-core -->
+<dependency>
+    <groupId>nl.siegmann.epublib</groupId>
+    <artifactId>epublib-core</artifactId>
+    <version>3.1</version>
+</dependency>
+
+		
 	</dependencies>
 
 	<build>
