--- a/teamProjectAdmin/src/main/resources/global.properties
+++ b/teamProjectAdmin/src/main/resources/global.properties
@@ -1,4 +1,4 @@
 jdbc.driver=oracle.jdbc.OracleDriver
-jdbc.url=jdbc:oracle:thin:@39.116.34.40:1521:orcl
+jdbc.url=jdbc:oracle:thin:@192.168.0.118:1521:xe
 jdbc.username=team
 jdbc.password=team
